syntax = "proto3";

message Order {
  int64 col1 = 1;
  string col2 = 2;
  string col3 = 3;
  string col4 = 4;
  string col5 = 5;
  string col6 = 6;
  string col7 = 7;
  string col8 = 8;
  string col9 = 9;
  string col10 = 10;
  float col11 = 11;
  float col12 = 12;
  float col13 = 13;
  float col14 = 14;
  float col15 = 15;
  float col16 = 16;
  float col17 = 17;
  float col18 = 18;
  float col19 = 19;
  float col20 = 20;
  float col21 = 21;
  float col22 = 22;
  float col23 = 23;
  float col24 = 24;
  float col25 = 25;
  float col26 = 26;
  float col27 = 27;
  float col28 = 28;
  float col29 = 29;
  float col30 = 30;
  float col31 = 31;
  float col32 = 32;
  float col33 = 33;
  float col34 = 34;
  float col35 = 35;
  float col36 = 36;
  float col37 = 37;
  float col38 = 38;
  float col39 = 39;
  float col40 = 40;
  float col41 = 41;
  float col42 = 42;
  float col43 = 43;
  float col44 = 44;
  float col45 = 45;
  float col46 = 46;
  float col47 = 47;
  float col48 = 48;
  float col49 = 49;
  float col50 = 50;
  float col51 = 51;
  float col52 = 52;
  float col53 = 53;
  float col54 = 54;
  float col55 = 55;
  float col56 = 56;
  float col57 = 57;
  float col58 = 58;
  float col59 = 59;
  float col60 = 60;
  float col61 = 61;
  float col62 = 62;
  float col63 = 63;
  float col64 = 64;
  float col65 = 65;
  float col66 = 66;
  float col67 = 67;
  float col68 = 68;
  float col69 = 69;
  float col70 = 70;
  float col71 = 71;
  float col72 = 72;
  float col73 = 73;
  float col74 = 74;
  float col75 = 75;
  float col76 = 76;
  float col77 = 77;
  float col78 = 78;
  float col79 = 79;
  float col80 = 80;
  float col81 = 81;
  float col82 = 82;
  float col83 = 83;
  float col84 = 84;
  float col85 = 85;
  float col86 = 86;
  float col87 = 87;
  float col88 = 88;
  float col89 = 89;
  float col90 = 90;
  float col91 = 91;
  float col92 = 92;
  float col93 = 93;
  float col94 = 94;
  float col95 = 95;
  float col96 = 96;
  float col97 = 97;
  float col98 = 98;
  float col99 = 99;
  float col100 = 100;
}

message OrderRequest
{
}

message OrderResponse
{
  repeated Order orders = 1;
}

service Orders {

  rpc GetOrders(OrderRequest) returns (OrderResponse) {}
  rpc GetOrdersStream(OrderRequest) returns (stream Order) {}
}